@@ -1,6 +1,7 @@
 kbd-chooser (1.17) UNRELEASED; urgency=low
 
   * Add missing debian-installer/uml-console template.
+  * Use di_system_subarch_analyze rather than forking archdetect.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 25 Jul 2005 23:33:34 +0100
 
